# spglib

./: .cmake-format  .envrc  .gitignore  CMakeLists.txt  requirements.txt
cmake/: SpglibGlobalSetup.cmake
fortran/: CMakeLists.txt
python/: CMakeLists.txt
src/: debug.c
test/: CMakeLists.txt  CMakePresets-Release.json  CMakePresets.json
test/example/c_api/: CMakeLists.txt
test/example/fortran_api/: CMakeLists.txt
test/package/FetchContent/: CMakeLists.txt
test/package/find_package/: CMakeLists.txt
test/package/pkg-config/: CMakeLists.txt
